--- a/bootstrap-5.3.2-dist/index.html
+++ b/bootstrap-5.3.2-dist/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-	<a href="https://https://dsfarmer.github.io/Q3-SEATWORK1/bootstrap/"> </a>
+	<a href="https://https://dsfarmer.github.io/bootstrap/"> </a>
 	<title> ICT Seatwork 1 </title>
 	<style> 
 		
